@@ -1,7 +1,9 @@
-/* $Id: ChangeLog 601 2006-11-26 00:19:19Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 611 2006-11-26 05:35:06Z knut.osmundsen@oracle.com $ */
 
 2006-11-25:
     - kmk, kBuild:
+        o Added cat as builtin command.
+        o Added GNU sed version 4.1.5 and ported it to MSC.
         o Added rmdir as builtin and external command.
         o Made mkdir not modify the argument strings.
         o Made mkdir deal properly with DOS slashes on OS/2 and Windows.
